fix link binding and bump modal z-index

--- a/stylesheets/index.styl
+++ b/stylesheets/index.styl
@@ -9,7 +9,7 @@ _pad = 20px
   top 0
   height 100%
   width 100%
-  z-index 10
+  z-index 10000
   display none
 
   &.active
